--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   flutter_dotenv: ^5.1.0
   url_launcher: ^6.3.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
